style.css
body, html{
    height: 100%;
    margin: 0;
    font-size: 16px;
    font-family: sans-serif;
    font-weight: 400;
    line-height: 1.8em;
    color: #666;
}

.pimg1, .pimg2, .pimg3, .pimg4 {
    opacity: .8;
    position: relative;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.pimg1{
    background-image:url(./img/backgrounds/coding.jpeg);
    min-height: 800px;
}
.pimg2{
    background-image:url(./img/backgrounds/keyboard.jpeg);
    min-height: 500px;
}
.pimg3{
    background-image:url(./img/backgrounds/laptopp.jpg);
    min-height: 500px;
}
.pimg4{
    background-image:url(./img/backgrounds/contact.jpg);
    min-height: 500px;
}
#languages{
    max-height: 1in;
}
.section{
text-align: center;
padding: 50px 80px;
}
.section-light{
    background-color: #f4f4f4;
    color: #666;
}
.section-dark{
    background-color: #282e34;
    color: #ddd;
}

.ptext{
    position: absolute;
    top: 50%;
    bottom: 50%;
    width: 100%;
    text-align: center;
    color: #000;
    font-size:27px;
    letter-spacing: 8px;
    text-transform: uppercase;
}
#pic{
    max-height: 3in;
    border-radius: 40px;
    box-shadow: -20px 10px 10px;
}

.boarder{
    background-color: rgb(70, 70, 70);
    color: #fff;
    padding: 20px;
    margin: 20px;
    border-radius: 20px;

}
.boarder-trans{
    background-color: transparent;
    color: white;
}
.card-container{
    width: 250px;
    height: 250px;
    margin: .5in;
}
.card{
    width: 100%;
    height: 100%;
    transition: transform 1s ease-in-out;
    transform-style: preserve-3d;
}
#card-image{
    height: 245px;
    width: 245px;
    opacity: .7;
}
.card figure{
    height: 100%;
    width: 100%;
    position: absolute;
}
.card .front{
    background: rgb(78, 73, 73);
    color: white;
}
.card .back{
    background: rgb(143, 143, 156);
    color: white;
    transform:rotateY(180deg);
}
.card-container:hover .card{
    transform: rotateY(180deg);
}
#section3{
    display: flex;
    justify-content: center;
}

